<resources>
    <string name="app_name_parenting_hub">Parenting Hub</string>
    <string name="app_name">PKL Parenting Hub</string>

    <!-- Title -->
    <string name="Title1">.@sekarrafiaturrahmah128</string>
    <string name="Title2">Edit Profile</string>

    <!-- Edit Profile -->
    <string name="edit_name">Nama</string>
    <string name="hint_edit_name">Masukkan Nama Anda</string>
    <string name="edit_username">Nama Pengguna</string>
    <string name="hint_edit_username">Masukkan Nama Pengguna</string>
    <string name="edit_bio">Bio</string>
    <string name="hint_edit_bio">Tambahkan Bio</string>
    <string name="edit_gender">Jenis Kelamin</string>
    <string name="edit_radio_button1">Laki - laki</string>
    <string name="edit_radio_button2">Perempuan</string>
    <string name="edit_date">Tanggal Lahir</string>
    <string name="hint_edit_date">Pilih Tanggal</string>
    <string name="edit_button">Simpan</string>

    <!-- Profile -->
    <string name="prof_name">Sekar Affiaturrahmah A</string>
    <string name="prof_username">.@sekarrafiaturrahmah128</string>
    <string name="prof_desc">Saya adalah Ibu yang memiliki 2 anak. Kehidupan yang sangat menyenangkan karena saya bisa hidup sebagai ibu sekaligus istri yang kuat.</string>
    <string name="prof_following">211 Mengikuti</string>
    <string name="prof_followers">211 Pengikut</string>

    <!-- Regex Edit Profile -->
    <string name="ErrorName">* Nama Wajib Diisi</string>
    <string name="ErrorUsername">* Nama Pengguna Wajib Diisi</string>
    <string name="ErrorDate">* Tanggal Lahir Wajib Diisi</string>
    <string name="RegexFullName">Nama lengkap minimal 3 karakter</string>
    <string name="RegexName">Nama lengkap tidak bisa berisi simbol dan angka</string>
    <string name="RegexFullUsername">Username minimal 6 karakter</string>
    <string name="RegexUsername">Username tidak bisa menggunakan simbol selain . dan _</string>

    <!-- List Arthicle -->
    <string name="User">Razza Galang Adzan</string>
    <string name="Like">178 Suka</string>
    <string name="Date">10 Agustus 2021</string>
    <string name="Username">.@SekarAfiaturrahman</string>
    <string name="desc_art">Ini Beberapa Makanan yang ternyata tidak di Rekomendasikan untuk Baby</string>

    <!-- List Connection -->
    <string name="connec_name">Sekar Affiaturrahmah A</string>
    <string name="connec_username">.@sekarrafiaturrahmah128</string>
    <string name="connec_follow">Ikuti</string>
    <string name="connec_followers">Mengikuti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_title_beranda">Beranda</string>
    <string name="menu_title_event">Event</string>
    <string name="menu_title_notification">Notifikasi</string>
    <string name="menu_title_profile">Profile</string>

    <string name="error_text_null_fullname">* Nama Lengkap harus diisi</string>
    <string name="error_text_null_username">* Nama Pengguna harus diisi</string>
    <string name="error_text_null_email">* Surel harus diisi</string>
    <string name="error_text_null_password">* Kata Sandi harus diisi</string>
    <string name="error_text_null_confirm_password">* Konfirmasi Kata Sandi harus diisi</string>
    <string name="error_text_min_fullname">* Nama Lengkap minimal berisi 3 Karakter</string>
    <string name="error_text_min_username">* Nama Pengguna minimal berisi 6 Karakter</string>
    <string name="error_text_password">* Password minimal berisi 8 Karakter dan 1 Angka</string>
    <string name="error_text_only_character">* Tidak boleh mengandung unsur angka dan simbol</string>
    <string name="error_text_format_email">* Format Email tidak sesuai</string>
    <string name="error_text_confirm_password">* Konfirmasi Password tidak sesuai</string>

    <!-- Title Profile-->
    <string name="Title1">.@sekarrafiaturrahmah128</string>
    <string name="Title2">Edit Profile</string>

    <!-- Edit Profile -->
    <string name="edit_name">Nama</string>
    <string name="hint_edit_name">Masukkan Nama Anda</string>
    <string name="edit_username">Nama Pengguna</string>
    <string name="hint_edit_username">Masukkan Nama Pengguna</string>
    <string name="edit_bio">Bio</string>
    <string name="hint_edit_bio">Tambahkan Bio</string>
    <string name="edit_gender">Jenis Kelamin</string>
    <string name="edit_radio_button1">Laki - laki</string>
    <string name="edit_radio_button2">Perempuan</string>
    <string name="edit_date">Tanggal Lahir</string>
    <string name="hint_edit_date">Pilih Tanggal</string>
    <string name="edit_button">Simpan</string>

    <!-- Profile -->
    <string name="prof_name">Sekar Affiaturrahmah A</string>
    <string name="prof_username">.@sekarrafiaturrahmah128</string>
    <string name="prof_desc">Saya adalah Ibu yang memiliki 2 anak. Kehidupan yang sangat menyenangkan karena saya bisa hidup sebagai ibu sekaligus istri yang kuat.</string>
    <string name="prof_following">211 Mengikuti</string>
    <string name="prof_followers">211 Pengikut</string>

    <!-- Regex Edit Profile -->
    <string name="ErrorName">* Nama Wajib Diisi</string>
    <string name="ErrorUsername">* Nama Pengguna Wajib Diisi</string>
    <string name="ErrorDate">* Tanggal Lahir Wajib Diisi</string>
    <string name="RegexFullName">Nama lengkap minimal 3 karakter</string>
    <string name="RegexName">Nama lengkap tidak bisa berisi simbol dan angka</string>
    <string name="RegexFullUsername">Username minimal 6 karakter</string>
    <string name="RegexUsername">Username tidak bisa menggunakan simbol selain . dan _</string>

    <!-- List Arthicle -->
    <string name="User">Razza Galang Adzan</string>
    <string name="Like">178 Suka</string>
    <string name="Date">10 Agustus 2021</string>
    <string name="Username">.@SekarAfiaturrahman</string>
    <string name="desc_art">Ini Beberapa Makanan yang ternyata tidak di Rekomendasikan untuk Baby</string>

    <!-- List Connection -->
    <string name="connec_name">Sekar Affiaturrahmah A</string>
    <string name="connec_username">.@sekarrafiaturrahmah128</string>
    <string name="connec_follow">Ikuti</string>
    <string name="connec_followers">Mengikuti</string>

    <!-- Article -->
    <string name="add_image_article">Tambahkan Foto Sampul</string>
    <string name="add_title_article">Masukkan Judul Artikel</string>
    <string name="title_article">Judul Artikel</string>
    <string name="continue_article">Lanjut</string>
    <string name="write_article">Tulis Artikelmu Disini..</string>
    <string name="upload_article">Unggah Artikel</string>
    <string name="another_article">Artikel Lainnya</string>
    <string name="edit_article">Edit Artikel</string>
    <string name="delete_article">Hapus Artikel</string>
    <string name="search_article">Cari Artikel</string>
    <string name="null_title">* Judul Artikel Wajib Diisi</string>
    <string name="null_cover">* Foto Sampul Wajib Diunggah</string>
    <string name="null_article">* Artikel Wajib Diisi</string>
    <string name="min_article">* Artikel minimal berisi 100 karakter</string>
    <string name="example_title_article">Ini Beberapa Makanan yang ternyata tidak di Rekomendasikan untuk Baby</string>
    <string name="search_here">Cari di sini..</string>
</resources>