<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuBottomNavigationHome"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/menu_title_beranda"/>

    <item
        android:id="@+id/menuBottomNavigationEvent"
        android:icon="@drawable/ic_calendar"
        android:enabled="true"
        android:title="@string/menu_title_event"/>

    <item
        android:id="@+id/menuBottomNavigationCreateArticle"
        android:enabled="false"
        android:title=""/>

    <item
        android:id="@+id/menuBottomNavigationNotification"
        android:icon="@drawable/ic_notification"
        android:enabled="true"
        android:title="@string/menu_title_notification"/>

    <item
        android:id="@+id/menuBottomNavigationProfile"
        android:icon="@drawable/ic_profile"
        android:enabled="true"
        android:title="@string/menu_title_profile"/>

</menu>