<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivProf"
        android:layout_width="@dimen/custom_icon"
        android:layout_height="@dimen/custom_icon"
        android:layout_marginHorizontal="@dimen/screen_margin"
        android:layout_marginVertical="@dimen/custom_margin_vertical"
        android:layout_marginStart="@dimen/medium_margin"
        android:background="@drawable/style_rounded"
        android:padding="@dimen/extra_small_margin"
        android:scaleType="centerCrop"
        android:src="@drawable/img_prof"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/circleImage"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginVertical="@dimen/normal_margin"
        android:text="@string/User"
        android:textAppearance="@style/TextAppearance.Caption"
        app:layout_constraintStart_toEndOf="@+id/ivProf"
        app:layout_constraintTop_toTopOf="@+id/ivProf"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivDefault"
        android:layout_width="@dimen/button_edit_profile_radius"
        android:layout_height="@dimen/button_edit_profile_radius"
        android:src="@drawable/img_default"
        style="@style/cornerImage"
        android:layout_marginHorizontal="@dimen/screen_margin"
        app:layout_constraintTop_toTopOf="@id/ivProf"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDesc"
        android:layout_width="@dimen/custom_width_list"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/screen_margin"
        android:gravity="start"
        android:text="@string/desc_art"
        android:textAppearance="@style/TextAppearance.Body6"
        app:layout_constraintEnd_toStartOf="@+id/ivDefault"
        app:layout_constraintStart_toStartOf="@id/icLike"
        app:layout_constraintTop_toBottomOf="@id/tvUser" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icLike"
        android:layout_width="@dimen/button_large_radius"
        android:layout_height="@dimen/button_large_radius"
        android:layout_marginHorizontal="@dimen/custom_margin_20dp"
        android:layout_marginVertical="@dimen/medium_margin"
        android:src="@drawable/ic_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesc" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/custom_margin_20dp"
        android:text="@string/Like"
        android:textAppearance="@style/TextAppearance.Validation"
        android:textColor="@color/grey"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/icLike"
        app:layout_constraintTop_toTopOf="@id/icLike" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/custom_margin_horizontal"
        android:text="@string/Date"
        android:textColor="@color/grey"
        android:textAppearance="@style/TextAppearance.Validation"
        android:layout_marginBottom="@dimen/medium_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ivDefault"
        app:layout_constraintTop_toTopOf="@id/icLike" />

</androidx.constraintlayout.widget.ConstraintLayout>